--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,11 @@
 
 
     <item
+        android:id="@+id/menu"
+        android:icon="@drawable/ic_baseline_menu_24"
+        app:showAsAction="ifRoom"
+        android:title="notificacion" />
+    <item
         android:id="@+id/search"
         android:icon="@drawable/ic_baseline_notifications_24"
         app:showAsAction="ifRoom"
