--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:id="@+id/email"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:hint="Username or Email"
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:id="@+id/password"
         android:hint="Password"
         tools:ignore="TouchTargetSizeCheck" />
 
