--- a/app/src/main/res/layout/fragment_dialisis.xml
+++ b/app/src/main/res/layout/fragment_dialisis.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DialisisActivity">
-
-   <!-- <fragment
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:name="com.example.kidney.MenuFragment"
-        android:id="@+id/fragmentMenuBar"
-        tools:layout="@layout/fragment_menu"
-        app:layout_constraintTop_toTopOf="parent"
-        />-->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".DialisisFragment">
 
     <TextView
         app:layout_constraintTop_toTopOf="parent"
